[gd_scene load_steps=15 format=3 uid="uid://cm4rxgm00aott"]

[ext_resource type="Texture2D" uid="uid://dqxko78c2c2p1" path="res://Sprites/Items/Mysterial.png" id="1_syi3j"]
[ext_resource type="Script" path="res://Script/Items script/mysterial.gd" id="1_uakqn"]
[ext_resource type="AudioStream" uid="uid://duu2d2qwugmbt" path="res://Sounds/Selected/Swipe.wav" id="3_ckt1w"]
[ext_resource type="AudioStream" uid="uid://camknw8w3bjic" path="res://Sounds/Selected/Levelup.wav" id="4_mte5a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fhqdi"]
radius = 29.0689

[sub_resource type="AtlasTexture" id="AtlasTexture_27hin"]
atlas = ExtResource("1_syi3j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u87c3"]
atlas = ExtResource("1_syi3j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8xou"]
atlas = ExtResource("1_syi3j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mehtl"]
atlas = ExtResource("1_syi3j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mob2w"]
atlas = ExtResource("1_syi3j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctsu1"]
atlas = ExtResource("1_syi3j")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h1rbl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27hin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u87c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8xou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mehtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mob2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctsu1")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_vyj8j"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n54o8"]
_data = {
"default": SubResource("Animation_vyj8j")
}

[node name="Mysterial" type="Area2D"]
texture_filter = 1
script = ExtResource("1_uakqn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fhqdi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_h1rbl")
frame_progress = 0.95724

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n54o8")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Hold" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ckt1w")
volume_db = 10.0
pitch_scale = 0.75

[node name="Absorb" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mte5a")
volume_db = 20.0
pitch_scale = 0.65

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
